Fix percent encoding of kate session file names not being taken into account

BUG: 436871